fixes overflow hidden issue on user admin dropdown
Summary: Fixes T1440

Test Plan: test if user-admin dropdown is no longer hidden

Reviewers: sophshep

Maniphest Tasks: T1440

Differential Revision: https://phabricator.ushahidi.com/D740

--- a/assets/css/rtl-style.css
+++ b/assets/css/rtl-style.css
@@ -1,7 +1,7 @@
 /*------------------------------------*\
     $BOURBON & FRIENDS
 \*------------------------------------*/
-/*@import "css3/selection";*/
+/* @import "css3/selection"; */
 html {
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
@@ -2692,6 +2692,7 @@ ul.breadcrumb {
   .header.header-compact .container, .header.header-compact .container-centered {
     position: fixed;
     top: 0;
+    overflow: visible;
     transition: all, 0.5s; }
   .header.header-compact .button-create {
     opacity: 1 !important; }
@@ -2702,7 +2703,14 @@ ul.breadcrumb {
         display: inline-block; } }
   .header.header-compact .parallax {
     opacity: 1 !important;
-    bottom: 0 !important; }
+    bottom: 0 !important;
+    height: 68px; }
+  .header.header-compact .hero-image {
+    overflow: hidden;
+    position: fixed;
+    height: 68px;
+    top: 0;
+    width: 100%; }
 
 .map {
   height: 700px;
