--- a/assets/sass/4_blocks/_header.scss
+++ b/assets/sass/4_blocks/_header.scss
@@ -208,6 +208,7 @@
         .container {
             position: fixed;
             top: 0;
+            overflow: visible;
             @include transition(all, .5s);
         }
 
@@ -227,6 +228,15 @@
         .parallax {
             opacity: 1 !important;
             bottom: 0 !important;
+            height: 68px;
+        }
+
+        .hero-image {
+            overflow: hidden;
+            position: fixed;
+            height: 68px;
+            top: 0;
+            width: 100%;
         }
 
     }
